Fixed names not shown after switching flags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Country Flags</title>
 </head>
 <body>
     <div id="menu">
