added browser icon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Country Flags</title>
+    <link id="favicon" rel="icon" href="" type="image/x-icon">
 </head>
 <body>
     <div id="menu">
