added github button at the lower right corner

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Country Flags</title>
     <link id="favicon" rel="icon" href="" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <div id="menu">
@@ -18,5 +19,10 @@
     </div>
     <script src="flagsData.js"></script>
     <script src="script.js"></script>
+    <div id="buttons">
+        <a href="https://github.com/amri-karim/countryflags" target="_blank">
+            <button id="github-button"><i class="fab fa-github"></i></button>
+        </a>
+    </div>
 </body>
 </html>
